--- a/src/app/controls/controls.component.css
+++ b/src/app/controls/controls.component.css
@@ -3,10 +3,7 @@
   justify-content: space-evenly;
 }
 
-button {
-  width: 15%;
-}
-
+button,
 form {
   width: 15%;
 }
